--- a/styles/main.css
+++ b/styles/main.css
@@ -42,6 +42,12 @@ a {
     cursor: pointer;
   }
 
+  button:hover {
+    background-color: #f6980c;
+    box-shadow: 0 16px 36px rgba(246 152 12 / 20%);
+    transition: background-color 0.3s ease-in;
+  }
+
   .about {
     display: flex;
     justify-content: space-around;
@@ -82,4 +88,111 @@ a {
     padding: 20px 25px;
     margin-top: 20px;
 
+  }
+
+  .form {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #1D263A;
+    color: #fff;
+    padding-top: 115px;
+    padding-bottom: 115px;
+    text-align: center;
+  }
+
+  .form h1 {
+    font-size: 48px;
+  }
+
+  .form p {
+    font-size: 18px;
+    opacity: 0.65;
+  }
+
+  .form__container {
+    width: 550px;
+  }
+
+  .form__group {
+    display: flex;
+    flex-direction: column;
+    text-align: left;
+  }
+
+  .form form {
+    display: grid;
+    grid-gap: 20px;
+    margin-top: 60px;
+  }
+
+  .form label {
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 15px;
+  }
+
+  .form input {
+    font-size: 18px;
+    color: #213053;
+    height: 60px;
+    padding: 0 20px;
+    border-radius: 30px;
+    border: none;
+    outline: none;
+  }
+
+  .form select {
+    font-size: 18px;
+    color: #213053;
+    height: 60px;
+    padding: 0 20px;
+    border-radius: 30px;
+    border: none;
+  }
+
+  .form__submit {
+    font-size: 18px;
+    font-weight: 600;
+    margin-top: 40px;
+  }
+
+  .select {
+    appearance: none;
+  }
+
+  footer {
+    padding: 90px 20px;
+    font-size: 16px;
+    font-weight: 600;
+  }
+
+  .footer__container {
+    display: flex;
+    justify-content: center;
+  }
+
+  .footer__group {
+    margin-right: 80px;
+  }
+
+  .footer__group h3 {
+    font-size: 16px;
+    opacity: 07;
+    margin-bottom: 30px;
+  }
+
+  .footer__links {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .footer__links a{
+    margin-bottom: 15px;
+  }
+
+  .footer__copyright p {
+    margin-top: 40px;
+    text-align: center;
+    opacity: 0.5;
   }
