--- a/styles/main.css
+++ b/styles/main.css
@@ -99,6 +99,172 @@ a {
 
   }
 
+  .features {
+    background-color: white;
+    padding: 115px 60px;
+  }
+
+  .cards {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    grid-gap: 50px;
+  }
+
+  .card {
+    padding: 35px 40px 25px;
+    border: 1px solid #D9E4E6;
+    border-radius: 5px;
+  }
+
+  .card__logo {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items:center;
+    width: 100px;
+    height: 100px;
+    font: 700 32px/22px sans-serif;
+    opacity: 0.8;
+    background-color: #eaeff9;
+    border-radius: 50%;
+  }
+
+  .one {
+    color: #ffb406;
+  }
+
+  .two {
+    color: #ad1714;
+  }
+
+  .three {
+    color: #22a030;
+  }
+
+  .card h3 {
+    font: bold 32px sans-serif;
+    opacity: 0.8;
+  }
+
+  .card p {
+    font: normal 16px/22px sans-serif;
+    opacity: 0.8;
+  }
+
+  .features__border {
+    margin: 50px 0;
+    border: 1px solid #919191;
+  }
+
+  .features__feedback {
+    display: flex;
+  }
+
+  .features__feedback-left {
+    margin-right: 10px;
+  }
+
+  .features__feedback-left h2 {
+    margin-right: 10px;
+    font: 48px sans-serif;
+  }
+
+  .features__feedback-left p {
+    margin-right: 10px;
+    font: 18px/26px sans-serif;
+    opacity: 0.7;
+  }
+
+  .features__feedback-right {
+    display: flex;
+    align-items: center;
+  }
+
+  .features__box {
+    padding: 30px 40px 25px;
+    border-radius: 25px;
+    color: #fff;
+  }
+
+  .features__box h3 {
+    margin-bottom: 20px;
+    font-size: 48px;
+  }
+
+  .features__savings-box {
+    height: 200px;
+    margin-right: 30px;
+    background-color: #dc5e26;
+    box-shadow: 0px 6px 0px rgb(221 95 38 / 20%);
+  }
+
+  .features__rate-box {
+    height: 200px;
+    background-color: #1D263A;
+    box-shadow: 0px 6px 0px rgb(29 38 58 / 20%);
+  }
+
+  .promo {
+    display: flex;
+    height: 500px;
+  }
+
+  .promo__image {
+    width: 50%;
+    flex-shrink: 0;
+    background: url(../img/promo.jpg) no-repeat center;
+    background-size: cover;
+  }
+
+  .promo__right {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: #dd5f26;
+    padding: 160px 60px;
+  }
+
+  .promo__card {
+    /*font-size: 7px;*/
+    height: 260px;
+    padding: 30px 40px;
+    background-color: #fff;
+    border-radius: 25px;
+  }
+
+  .promo__card h2 {
+    font: 700 20px/22px sans-serif;
+  }
+
+  .promo__card p {
+    font: normal 16px/20px sans-serif;
+    opacity: 0.8;
+  }
+
+  .point {
+    display: inline-block;
+    width: 10px;
+    height: 10px;
+    margin-right: 10px;
+    color:#f6980c;
+    background-color: #f6980c;
+    border-radius: 50%;
+  }
+
+  .promo__btn {
+    margin-top: 10px;
+    background-color: #107b1c;
+    font: 600 18px sans-serif;
+    padding: 15px 30px;
+    height: 50px;
+    /*box-shadow: 6px 6px 22px rgba(38, 221, 108, 0.3);*/
+  }
+
+  /*.promo__btn i {
+    font-size: 12px;
+    margin-left: 5px;
+  }*/
+
   .form {
     display: flex;
     justify-content: center;
@@ -110,6 +276,10 @@ a {
     text-align: center;
   }
 
+  .form__container {
+    width: 550px;
+  }
+
   .form h1 {
     font-size: 48px;
   }
@@ -117,10 +287,6 @@ a {
   .form p {
     font-size: 18px;
     opacity: 0.65;
-  }
-
-  .form__container {
-    width: 550px;
   }
 
   .form__group {
@@ -164,6 +330,7 @@ a {
     font-size: 18px;
     font-weight: 600;
     margin-top: 40px;
+    /*box-shadow: 6px 6px 10px rgba(38, 221, 108, 0.2);*/
   }
 
   .select {
@@ -230,6 +397,16 @@ a {
       width: 75px;
       height: 75px; 
     }
+    .features {
+      padding: 50px 10px;
+    }
+    .cards {
+      display: grid;
+      grid-template-columns: auto;
+    }
+    .card {
+
+    }
     .form {
       padding: 50px 20px;
     }
@@ -265,6 +442,58 @@ a {
     .about__sun-image {
       width: 75px;
       height: 75px; 
+    }
+    .features {
+      padding: 50px 10px;
+    }
+    .cards {
+      display: grid;
+      grid-template-columns: auto;
+      grid-gap: 30px;
+    }
+    .features__feedback {
+      flex-direction: column;
+    }
+    .features__feedback-left {
+      margin-right: 0px;
+    }
+    .features__feedback-left h2 {
+      font: 36px sans-serif;
+    }
+    .features__feedback-right {
+      display: flex;
+      flex-direction: column;
+      padding: 0 10px 0;
+    }
+    .features__box h3 {
+      font-size: 36px;
+    }
+    .features__savings-box {
+      margin: 30px 0 0;
+      width: 100%;
+    }
+    .features__rate-box {
+      margin: 30px 0 0;
+      width: 100%;
+    }
+    .promo {
+      flex-wrap: wrap-reverse;
+    }
+    .promo__image {
+      width: 100%;
+      height: 500px;
+    }
+    .promo__right {
+      height: 500px;
+      padding: 50px 10px;
+      margin-bottom: px;
+    }
+    .promo__card {
+      height: 340px;
+      padding-top: 30px;
+    }
+    .promo__btn {
+      margin-bottom: px;
     }
     .form {
       padding: 50px 10px;
